codegen/generated/goud_engine.h

/**
 * Opaque identifier for an engine context.
 */
typedef struct GoudContextId {
    uint64_t _0;
} GoudContextId;
/**
 * Returns the number of animations in a model, or -1 if invalid.
 */
int32_t goud_renderer3d_get_animation_count(struct GoudContextId context_id, uint32_t model_id);
/**
 * Copies the animation name to the output buffer.
 */
int32_t goud_renderer3d_get_animation_name(struct GoudContextId context_id, uint32_t model_id, int32_t anim_index, char *out_buf, int32_t buf_len);
/**
 * Starts playing an animation on a model instance.
 */
bool goud_renderer3d_play_animation(struct GoudContextId context_id, uint32_t instance_id, int32_t anim_index, bool looping);
/**
 * Stops animation playback on a model instance.
 */
bool goud_renderer3d_stop_animation(struct GoudContextId context_id, uint32_t instance_id);
/**
 * Sets the playback speed for a model instance's animation.
 */
bool goud_renderer3d_set_animation_speed(struct GoudContextId context_id, uint32_t instance_id, float speed);
/**
 * Sets up blending between two animation clips.
 */
bool goud_renderer3d_blend_animations(struct GoudContextId context_id, uint32_t instance_id, int32_t anim_a, int32_t anim_b, float blend_factor);
/**
 * Starts a timed transition from the current animation to a target clip.
 */
bool goud_renderer3d_transition_animation(struct GoudContextId context_id, uint32_t instance_id, int32_t target_anim, float duration);
/**
 * Returns whether an animation is currently playing on a model instance.
 */
bool goud_renderer3d_is_animation_playing(struct GoudContextId context_id, uint32_t instance_id);
/**
 * Returns the playback progress (0.0 to 1.0) of the primary animation.
 */
float goud_renderer3d_get_animation_progress(struct GoudContextId context_id, uint32_t instance_id);
/**
 * Advances all animation players by `delta_time` seconds.
 */
bool goud_renderer3d_update_animations(struct GoudContextId context_id, float delta_time);
/**
 * Enables or disables phase-locked animation for a model or instance.
 */
bool goud_renderer3d_set_animation_phase_lock(struct GoudContextId context_id, uint32_t model_id, bool enabled);
/**
 * Enables or disables the pre-baked animation cache for a model.
 */
bool goud_renderer3d_set_animation_baking_enabled(struct GoudContextId context_id, uint32_t model_id, bool enabled);
/**
 * Renders all 3D objects in the scene.
 */
bool goud_renderer3d_render(struct GoudContextId context_id);
/**
 * Renders all 3D objects (alias for goud_renderer3d_render).
 */
bool goud_renderer3d_render_all(struct GoudContextId context_id);
/**
 * Returns the number of draw calls issued during the last `render()` call.
 */
int32_t goud_renderer3d_get_draw_calls(struct GoudContextId context_id);
/**
 * Returns the number of objects that passed frustum culling during the last
 */
int32_t goud_renderer3d_get_visible_object_count(struct GoudContextId context_id);
/**
 * Returns the number of objects rejected by frustum culling during the last
 */
int32_t goud_renderer3d_get_culled_object_count(struct GoudContextId context_id);
/**
 * Returns the number of instanced draw calls issued during the last
 */
int32_t goud_renderer3d_get_instanced_draw_calls(struct GoudContextId context_id);
/**
 * Returns the total number of instances submitted via instanced draw calls
 */
int32_t goud_renderer3d_get_active_instance_count(struct GoudContextId context_id);
/**
 * Returns the number of animation players that were fully evaluated (bone
 */
int32_t goud_renderer3d_get_animation_evaluation_count(struct GoudContextId context_id);
/**
 * Returns the number of animation evaluations that were skipped during the
 */
int32_t goud_renderer3d_get_animation_evaluation_saved_count(struct GoudContextId context_id);
/**
 * Returns the number of bone matrix buffer uploads performed during the last
 */
int32_t goud_renderer3d_get_bone_matrix_upload_count(struct GoudContextId context_id);
/**
 * Creates a 3D material.
 */
uint32_t goud_renderer3d_create_material(struct GoudContextId context_id, int32_t material_type, float r, float g, float b, float a, float shininess, float metallic, float roughness, float ao);
/**
 * Updates an existing 3D material.
 */
bool goud_renderer3d_update_material(struct GoudContextId context_id, uint32_t material_id, int32_t material_type, float r, float g, float b, float a, float shininess, float metallic, float roughness, float ao);
/**
 * Removes a 3D material.
 */
bool goud_renderer3d_remove_material(struct GoudContextId context_id, uint32_t material_id);
/**
 * Binds a material to an object.
 */
bool goud_renderer3d_set_object_material(struct GoudContextId context_id, uint32_t object_id, uint32_t material_id);
/**
 * Gets the material ID bound to an object. Returns `GOUD_INVALID_MATERIAL` if none.
 */
uint32_t goud_renderer3d_get_object_material(struct GoudContextId context_id, uint32_t object_id);
/**
 * Loads a 3D model file from disk and returns a model handle.
 */
uint32_t goud_renderer3d_load_model(struct GoudContextId context_id, const char *path_ptr);
/**
 * Destroys a 3D model and all its owned GPU resources.
 */
bool goud_renderer3d_destroy_model(struct GoudContextId context_id, uint32_t model_id);
/**
 * Creates an independent instance of a source model.
 */
uint32_t goud_renderer3d_instantiate_model(struct GoudContextId context_id, uint32_t source_model_id);
/**
 * Mark a model or instance as static for batching optimizations.
 */
bool goud_renderer3d_set_model_static(struct GoudContextId context_id, uint32_t model_id, bool is_static);
/**
 * Overrides the material on a specific sub-mesh of a model or instance.
 */
bool goud_renderer3d_set_model_material(struct GoudContextId context_id, uint32_t model_id, int32_t mesh_index, uint32_t material_id);
/**
 * Returns the number of sub-meshes in a model or instance.
 */
int32_t goud_renderer3d_get_model_mesh_count(struct GoudContextId context_id, uint32_t model_id);
/**
 * Returns the AABB bounding box of a model.
 */
bool goud_renderer3d_get_model_bounding_box(struct GoudContextId context_id, uint32_t model_id, float *out_min_x, float *out_min_y, float *out_min_z, float *out_max_x, float *out_max_y, float *out_max_z);
/**
 * Sets the position of a 3D model or instance.
 */
bool goud_renderer3d_set_model_position(struct GoudContextId context_id, uint32_t model_id, float x, float y, float z);
/**
 * Sets the rotation of a 3D model or instance (in degrees).
 */
bool goud_renderer3d_set_model_rotation(struct GoudContextId context_id, uint32_t model_id, float x, float y, float z);
/**
 * Sets the scale of a 3D model or instance.
 */
bool goud_renderer3d_set_model_scale(struct GoudContextId context_id, uint32_t model_id, float x, float y, float z);
/**
 * Creates multiple independent instances of a source model in one call.
 */
int32_t goud_renderer3d_instantiate_model_batch(struct GoudContextId context_id, uint32_t source_model_id, uint32_t count, uint32_t *out_ids);
/**
 * Sets positions for multiple models/instances in one call.
 */
int32_t goud_renderer3d_set_model_positions_batch(struct GoudContextId context_id, const uint32_t *model_ids, const float *positions, uint32_t count);
/**
 * Adds multiple models/instances to a scene in one call.
 */
int32_t goud_renderer3d_add_models_to_scene_batch(struct GoudContextId context_id, uint32_t scene_id, const uint32_t *model_ids, uint32_t count);
/**
 * Adds a bloom pass to the post-processing pipeline. Returns the pass index.
 */
int32_t goud_renderer3d_add_bloom_pass(struct GoudContextId context_id, float threshold, float intensity);
/**
 * Adds a Gaussian blur pass to the post-processing pipeline. Returns the pass index.
 */
int32_t goud_renderer3d_add_blur_pass(struct GoudContextId context_id, uint32_t radius);
/**
 * Adds a color grading pass to the post-processing pipeline. Returns the pass index.
 */
int32_t goud_renderer3d_add_color_grade_pass(struct GoudContextId context_id, float exposure, float contrast, float saturation);
/**
 * Removes a post-processing pass by index.
 */
bool goud_renderer3d_remove_postprocess_pass(struct GoudContextId context_id, uint32_t index);
/**
 * Returns the number of post-processing passes.
 */
uint32_t goud_renderer3d_postprocess_pass_count(struct GoudContextId context_id);
/**
 * Creates a new named 3D scene and returns its ID.
 */
uint32_t goud_renderer3d_create_scene(struct GoudContextId context_id, const char *name_ptr);
/**
 * Destroys a scene by ID. Returns `true` if the scene existed.
 */
bool goud_renderer3d_destroy_scene(struct GoudContextId context_id, uint32_t scene_id);
/**
 * Sets the current active scene. Returns `true` if the scene exists.
 */
bool goud_renderer3d_set_current_scene(struct GoudContextId context_id, uint32_t scene_id);
/**
 * Returns the current scene ID, or [`GOUD_INVALID_SCENE`] if none is active.
 */
uint32_t goud_renderer3d_get_current_scene(struct GoudContextId context_id);
/**
 * Clears the current scene so that all objects are rendered.
 */
bool goud_renderer3d_clear_current_scene(struct GoudContextId context_id);
/**
 * Adds an object to a scene. Returns `true` on success.
 */
bool goud_renderer3d_add_object_to_scene(struct GoudContextId context_id, uint32_t scene_id, uint32_t object_id);
/**
 * Removes an object from a scene. Returns `true` if the scene contained it.
 */
bool goud_renderer3d_remove_object_from_scene(struct GoudContextId context_id, uint32_t scene_id, uint32_t object_id);
/**
 * Adds a model to a scene. Returns `true` on success.
 */
bool goud_renderer3d_add_model_to_scene(struct GoudContextId context_id, uint32_t scene_id, uint32_t model_id);
/**
 * Removes a model from a scene. Returns `true` if the scene contained it.
 */
bool goud_renderer3d_remove_model_from_scene(struct GoudContextId context_id, uint32_t scene_id, uint32_t model_id);
/**
 * Adds a light to a scene. Returns `true` on success.
 */
bool goud_renderer3d_add_light_to_scene(struct GoudContextId context_id, uint32_t scene_id, uint32_t light_id);
/**
 * Removes a light from a scene. Returns `true` if the scene contained it.
 */
bool goud_renderer3d_remove_light_from_scene(struct GoudContextId context_id, uint32_t scene_id, uint32_t light_id);
/**
 * Creates a skinned mesh from raw vertex data.
 */
uint32_t goud_renderer3d_create_skinned_mesh(struct GoudContextId context_id, const float *vertices_ptr, uint32_t vertex_count);
/**
 * Removes a skinned mesh.
 */
bool goud_renderer3d_remove_skinned_mesh(struct GoudContextId context_id, uint32_t mesh_id);
/**
 * Sets the position of a skinned mesh.
 */
bool goud_renderer3d_set_skinned_mesh_position(struct GoudContextId context_id, uint32_t mesh_id, float x, float y, float z);
/**
 * Sets the rotation of a skinned mesh.
 */
bool goud_renderer3d_set_skinned_mesh_rotation(struct GoudContextId context_id, uint32_t mesh_id, float x, float y, float z);
/**
 * Sets the scale of a skinned mesh.
 */
bool goud_renderer3d_set_skinned_mesh_scale(struct GoudContextId context_id, uint32_t mesh_id, float x, float y, float z);
/**
 * Updates bone matrices for a skinned mesh.
 */
bool goud_renderer3d_set_skinned_mesh_bones(struct GoudContextId context_id, uint32_t mesh_id, const float *matrices_ptr, uint32_t bone_count);