sdks/python/goudengine/generated/_ffi.py

    _lib.goud_renderer3d_instantiate_model_batch.restype = ctypes.c_int32
    _lib.goud_renderer3d_set_model_positions_batch.argtypes = [GoudContextId, ctypes.POINTER(ctypes.c_uint32), ctypes.POINTER(ctypes.c_float), ctypes.c_uint32]
    _lib.goud_renderer3d_set_model_positions_batch.restype = ctypes.c_int32
    _lib.goud_renderer3d_add_models_to_scene_batch.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.POINTER(ctypes.c_uint32), ctypes.c_uint32]
    _lib.goud_renderer3d_add_models_to_scene_batch.restype = ctypes.c_int32
    _lib.goud_renderer3d_get_draw_calls.argtypes = [GoudContextId]
    _lib.goud_renderer3d_get_draw_calls.restype = ctypes.c_int32
    _lib.goud_renderer3d_get_visible_object_count.argtypes = [GoudContextId]
    _lib.goud_renderer3d_get_visible_object_count.restype = ctypes.c_int32
    _lib.goud_renderer3d_get_culled_object_count.argtypes = [GoudContextId]
    _lib.goud_renderer3d_get_culled_object_count.restype = ctypes.c_int32
    _lib.goud_renderer3d_get_instanced_draw_calls.argtypes = [GoudContextId]
    _lib.goud_renderer3d_get_instanced_draw_calls.restype = ctypes.c_int32
    _lib.goud_renderer3d_get_active_instance_count.argtypes = [GoudContextId]
    _lib.goud_renderer3d_get_active_instance_count.restype = ctypes.c_int32
    _lib.goud_renderer3d_get_bone_matrix_upload_count.argtypes = [GoudContextId]
    _lib.goud_renderer3d_get_bone_matrix_upload_count.restype = ctypes.c_int32
    _lib.goud_renderer3d_get_animation_evaluation_count.argtypes = [GoudContextId]
    _lib.goud_renderer3d_get_animation_evaluation_count.restype = ctypes.c_int32
    _lib.goud_renderer3d_get_animation_evaluation_saved_count.argtypes = [GoudContextId]
    _lib.goud_renderer3d_get_animation_evaluation_saved_count.restype = ctypes.c_int32
    _lib.goud_renderer3d_render.argtypes = [GoudContextId]
    _lib.goud_renderer3d_render.restype = ctypes.c_bool
    _lib.goud_renderer3d_render_all.argtypes = [GoudContextId]
    _lib.goud_renderer3d_render_all.restype = ctypes.c_bool
    _lib.goud_renderer3d_create_material.argtypes = [GoudContextId, ctypes.c_int32, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_renderer3d_create_material.restype = ctypes.c_uint32
    _lib.goud_renderer3d_update_material.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.c_int32, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_renderer3d_update_material.restype = ctypes.c_bool
    _lib.goud_renderer3d_remove_material.argtypes = [GoudContextId, ctypes.c_uint32]
    _lib.goud_renderer3d_remove_material.restype = ctypes.c_bool
    _lib.goud_renderer3d_set_object_material.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.c_uint32]
    _lib.goud_renderer3d_set_object_material.restype = ctypes.c_bool
    _lib.goud_renderer3d_get_object_material.argtypes = [GoudContextId, ctypes.c_uint32]
    _lib.goud_renderer3d_get_object_material.restype = ctypes.c_uint32
    _lib.goud_renderer3d_create_skinned_mesh.argtypes = [GoudContextId, ctypes.POINTER(ctypes.c_float), ctypes.c_uint32]
    _lib.goud_renderer3d_create_skinned_mesh.restype = ctypes.c_uint32
    _lib.goud_renderer3d_remove_skinned_mesh.argtypes = [GoudContextId, ctypes.c_uint32]
    _lib.goud_renderer3d_remove_skinned_mesh.restype = ctypes.c_bool
    _lib.goud_renderer3d_set_skinned_mesh_position.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_renderer3d_set_skinned_mesh_position.restype = ctypes.c_bool
    _lib.goud_renderer3d_set_skinned_mesh_rotation.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_renderer3d_set_skinned_mesh_rotation.restype = ctypes.c_bool
    _lib.goud_renderer3d_set_skinned_mesh_scale.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_renderer3d_set_skinned_mesh_scale.restype = ctypes.c_bool
    _lib.goud_renderer3d_set_skinned_mesh_bones.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.POINTER(ctypes.c_float), ctypes.c_uint32]
    _lib.goud_renderer3d_set_skinned_mesh_bones.restype = ctypes.c_bool
    _lib.goud_renderer3d_add_bloom_pass.argtypes = [GoudContextId, ctypes.c_float, ctypes.c_float]
    _lib.goud_renderer3d_add_bloom_pass.restype = ctypes.c_int32
    _lib.goud_renderer3d_add_blur_pass.argtypes = [GoudContextId, ctypes.c_uint32]
    _lib.goud_renderer3d_add_blur_pass.restype = ctypes.c_int32
    _lib.goud_renderer3d_add_color_grade_pass.argtypes = [GoudContextId, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_renderer3d_add_color_grade_pass.restype = ctypes.c_int32
    _lib.goud_renderer3d_remove_postprocess_pass.argtypes = [GoudContextId, ctypes.c_uint32]
    _lib.goud_renderer3d_remove_postprocess_pass.restype = ctypes.c_bool
    _lib.goud_renderer3d_postprocess_pass_count.argtypes = [GoudContextId]
    _lib.goud_renderer3d_postprocess_pass_count.restype = ctypes.c_uint32
    _lib.goud_renderer3d_load_model.argtypes = [GoudContextId, ctypes.c_char_p]
    _lib.goud_renderer3d_load_model.restype = ctypes.c_uint32
    _lib.goud_renderer3d_destroy_model.argtypes = [GoudContextId, ctypes.c_uint32]
    _lib.goud_renderer3d_destroy_model.restype = ctypes.c_bool
    _lib.goud_renderer3d_instantiate_model.argtypes = [GoudContextId, ctypes.c_uint32]
    _lib.goud_renderer3d_instantiate_model.restype = ctypes.c_uint32
    _lib.goud_renderer3d_set_model_static.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.c_bool]
    _lib.goud_renderer3d_set_model_static.restype = ctypes.c_bool
    _lib.goud_renderer3d_set_model_material.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.c_int32, ctypes.c_uint32]
    _lib.goud_renderer3d_set_model_material.restype = ctypes.c_bool
    _lib.goud_renderer3d_get_model_mesh_count.argtypes = [GoudContextId, ctypes.c_uint32]
    _lib.goud_renderer3d_get_model_mesh_count.restype = ctypes.c_int32
    _lib.goud_renderer3d_get_model_bounding_box.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.POINTER(ctypes.c_float), ctypes.POINTER(ctypes.c_float), ctypes.POINTER(ctypes.c_float), ctypes.POINTER(ctypes.c_float), ctypes.POINTER(ctypes.c_float), ctypes.POINTER(ctypes.c_float)]
    _lib.goud_renderer3d_get_model_bounding_box.restype = ctypes.c_bool
    _lib.goud_renderer3d_set_model_position.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_renderer3d_set_model_position.restype = ctypes.c_bool
    _lib.goud_renderer3d_set_model_rotation.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_renderer3d_set_model_rotation.restype = ctypes.c_bool
    _lib.goud_renderer3d_set_model_scale.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_renderer3d_set_model_scale.restype = ctypes.c_bool
    _lib.goud_renderer3d_get_animation_count.argtypes = [GoudContextId, ctypes.c_uint32]
    _lib.goud_renderer3d_get_animation_count.restype = ctypes.c_int32
    _lib.goud_renderer3d_get_animation_name.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.c_int32, ctypes.c_void_p, ctypes.c_int32]
    _lib.goud_renderer3d_get_animation_name.restype = ctypes.c_int32
    _lib.goud_renderer3d_play_animation.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.c_int32, ctypes.c_bool]
    _lib.goud_renderer3d_play_animation.restype = ctypes.c_bool
    _lib.goud_renderer3d_stop_animation.argtypes = [GoudContextId, ctypes.c_uint32]
    _lib.goud_renderer3d_stop_animation.restype = ctypes.c_bool
    _lib.goud_renderer3d_set_animation_speed.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.c_float]
    _lib.goud_renderer3d_set_animation_speed.restype = ctypes.c_bool
    _lib.goud_renderer3d_set_animation_baking_enabled.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.c_bool]
    _lib.goud_renderer3d_set_animation_baking_enabled.restype = ctypes.c_bool
    _lib.goud_renderer3d_set_animation_phase_lock.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.c_bool]
    _lib.goud_renderer3d_set_animation_phase_lock.restype = ctypes.c_bool
    _lib.goud_renderer3d_blend_animations.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.c_int32, ctypes.c_int32, ctypes.c_float]
    _lib.goud_renderer3d_blend_animations.restype = ctypes.c_bool
    _lib.goud_renderer3d_transition_animation.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.c_int32, ctypes.c_float]
    _lib.goud_renderer3d_transition_animation.restype = ctypes.c_bool
    _lib.goud_renderer3d_is_animation_playing.argtypes = [GoudContextId, ctypes.c_uint32]
    _lib.goud_renderer3d_is_animation_playing.restype = ctypes.c_bool
    _lib.goud_renderer3d_get_animation_progress.argtypes = [GoudContextId, ctypes.c_uint32]
    _lib.goud_renderer3d_get_animation_progress.restype = ctypes.c_float
    _lib.goud_renderer3d_update_animations.argtypes = [GoudContextId, ctypes.c_float]
    _lib.goud_renderer3d_update_animations.restype = ctypes.c_bool
    _lib.goud_renderer3d_create_scene.argtypes = [GoudContextId, ctypes.c_char_p]
    _lib.goud_renderer3d_create_scene.restype = ctypes.c_uint32
    _lib.goud_renderer3d_destroy_scene.argtypes = [GoudContextId, ctypes.c_uint32]
    _lib.goud_renderer3d_destroy_scene.restype = ctypes.c_bool
    _lib.goud_renderer3d_set_current_scene.argtypes = [GoudContextId, ctypes.c_uint32]
    _lib.goud_renderer3d_set_current_scene.restype = ctypes.c_bool
    _lib.goud_renderer3d_get_current_scene.argtypes = [GoudContextId]
    _lib.goud_renderer3d_get_current_scene.restype = ctypes.c_uint32
    _lib.goud_renderer3d_add_object_to_scene.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.c_uint32]
    _lib.goud_renderer3d_add_object_to_scene.restype = ctypes.c_bool
    _lib.goud_renderer3d_remove_object_from_scene.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.c_uint32]
    _lib.goud_renderer3d_remove_object_from_scene.restype = ctypes.c_bool
    _lib.goud_renderer3d_add_model_to_scene.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.c_uint32]
    _lib.goud_renderer3d_add_model_to_scene.restype = ctypes.c_bool
    _lib.goud_renderer3d_remove_model_from_scene.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.c_uint32]
    _lib.goud_renderer3d_remove_model_from_scene.restype = ctypes.c_bool
    _lib.goud_renderer3d_add_light_to_scene.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.c_uint32]
    _lib.goud_renderer3d_add_light_to_scene.restype = ctypes.c_bool
    _lib.goud_renderer3d_remove_light_from_scene.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.c_uint32]
    _lib.goud_renderer3d_remove_light_from_scene.restype = ctypes.c_bool
    _lib.goud_renderer3d_clear_current_scene.argtypes = [GoudContextId]
    _lib.goud_renderer3d_clear_current_scene.restype = ctypes.c_bool
